change the contents of index.html

--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
 </head>
 <body>
 	i love dierbaby.
+	<div>
+		this is my github.you can view my projects at http://github.com/paulguo
+	</div>
 </body>
 </html>
