test commit at company after clone from remote...

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 	i love dierbaby.
 	<div>
-		this is my github.you can view my projects at http://github.com/paulguo
+		this is my github.you can view my projects at <a href="http://github.com/paulguo">http://github.com/paulguo</a>
 	</div>
 </body>
 </html>
