changed index.html style and layout arrangement...

--- a/index.html
+++ b/index.html
@@ -2,12 +2,42 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
-	<title>Paulguo's Projects</title>
+	<title>Guokai's Github Page</title>
+	<style type="text/css">
+		body {
+			margin:0;
+			padding:15px 20px;
+			border-top:10px solid #61ad3c;
+		}
+		
+		symbol {
+			display:block;
+			width:134px;
+			height:75px;
+			background:url('guokai_dot_info_alpha.png');
+			
+			float:left;
+		}
+		
+		content {
+			display:block;
+			padding:3px 20px;
+			color:#61ad3c;
+			font:normal 14px/23px 'Tahoma';
+			
+			float:left;
+		}
+		content a {
+			color:#61ad3c;
+		}
+	</style>
 </head>
 <body>
-	i love dierbaby.
-	<div>
-		this is my github.you can view my projects at <a href="http://github.com/paulguo">http://github.com/paulguo</a>
-	</div>
+	<symbol></symbol>
+	<content>
+		Hi,everybody:<br />
+		This is my Github.You can view all of my projects at <a href="http://github.com/paulguo">here</a>.<br/>
+		If you wanna contact me,please send email to me via badkaikai at gmail.com
+	</content>
 </body>
 </html>
