--- a/index.html
+++ b/index.html
@@ -1,68 +1,58 @@
-<!DOCTYPE HTML>
-<html lang="en-US">
-<head>
-	<meta charset="UTF-8">
-	<title>Guokai's Github Page</title>
-	<style type="text/css">
-		body {
-			margin:0;
-			padding:15px 20px;
-			border-top:10px solid #61ad3c;
-		}
-		
-		symbol {
-			display:block;
-			width:134px;
-			height:75px;
-			background:url('guokai_dot_info_alpha.png');
-			
-			float:left;
-		}
-		
-		content {
-			display:block;
-			padding:3px 20px;
-			color:#61ad3c;
-			font:normal 14px/23px 'Tahoma';
-			
-			float:left;
-			
-			transition:0.3s;
-			-moz-transition:0.3s; /*Firefox 4*/
-			-webkit-transition:0.3s; /*Safari and Chrome*/
-			-o-transition:0.3s; /*Opera*/
-		}
-		
-		content a {
-			color:#61ad3c;
-		}
-		
-		content:hover {
-			padding-left:50px;
-		}
-		
-		content::selection {
-			background:#61ad3c;
-			color:white;
-		}
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Paulguo.GitHub.com by PaulGuo</title>
 
-		content::-moz-selection {
-			background:#61ad3c;
-			color:white;
-		}
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <meta name="viewport" content="width=device-width">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <h1>Paulguo.GitHub.com</h1>
+        <p></p>
 
-		content::-webkit-selection {
-			background:#61ad3c;
-			color:white;
-		}
-	</style>
-</head>
-<body>
-	<symbol></symbol>
-	<content>
-		Hi,everybody:<br />
-		This is my Github.You can view all of my projects at <a href="http://github.com/paulguo">here</a>.<br/>
-		If you wanna contact me,please send email to me via badkaikai at gmail.com
-	</content>
-</body>
+
+        <p class="view"><a href="https://github.com/PaulGuo">View My GitHub Profile</a></p>
+
+      </header>
+      <section>
+        <h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+
+<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+
+<h3>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+
+<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+
+<h3>
+<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
+
+<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+
+<h3>
+<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+
+<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+
+<h3>
+<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+
+<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+      </section>
+      <footer>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+      </footer>
+    </div>
+    <script src="javascripts/scale.fix.js"></script>
+    
+  </body>
 </html>
